--- a/Configuration/AddressBookEditor/CustomDataEditors/PushCustomDataEditor.xaml
+++ b/Configuration/AddressBookEditor/CustomDataEditors/PushCustomDataEditor.xaml
@@ -3,11 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="0.125*" />
+            <ColumnDefinition Width="0.7*" />
+            <ColumnDefinition Width="0.175*" />
         </Grid.ColumnDefinitions>
         
-        <ComboBox x:Name="cboConsumer" Grid.Column="0" Margin="2" IsEditable="True" ToolTip="Push-Empfängerplugin" Width="75" />
+        <ComboBox x:Name="cboConsumer" Grid.Column="0" Margin="2" IsEditable="True" ToolTip="Push-Empfängerplugin"/>
         <TextBox x:Name="txtRecipientApiKey" Grid.Column="1" Margin="2" ToolTip="API-Key des Empfängers" />
+        <TextBox x:Name="txtRecipientDeviceName" Grid.Column="2" Margin="2" ToolTip="Nur bei Pushover! Device Name des Empfängers" />
     </Grid>
 </UserControl>
